# PredictCustomerChurn

./: README.md  churn_library.py  churn_notebook.ipynb  churn_script_logging_and_tests.py  pyproject.toml
.ipynb_checkpoints/: Guide-checkpoint.ipynb  churn_notebook-checkpoint.ipynb
models/: logistic_model.pkl
tests/: test_atividade1.py
