[tool.poetry]
name = "atividade1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
icecream = "^2.1.1"
joblib = "^1.1.0"
matplotlib = "^3.5.1"
numpy = "^1.22.0"
pandas = "^1.3.5"
seaborn = "^0.11.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
